@@ -30,9 +30,10 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>8</source>
-                    <target>8</target>
-                </configuration>
+                    <source>16</source>
+                    <target>16</target>
+					<compilerArgs>--enable-preview</compilerArgs>
+				</configuration>
             </plugin>
 
         </plugins>
